# BetterRDP

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
csharp/: .gitignore  BetterRdp.sln  README.md
csharp/src/BetterRdp.App/: App.xaml  App.xaml.cs  BetterRdp.App.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
csharp/src/BetterRdp.App/Dialogs/: CredentialDialog.xaml  CredentialDialog.xaml.cs  MasterPasswordDialog.xaml  MasterPasswordDialog.xaml.cs  ProfileDialog.xaml  ProfileDialog.xaml.cs  ServerDialog.xaml  ServerDialog.xaml.cs
csharp/src/BetterRdp.App/Properties/: launchSettings.json
csharp/src/BetterRdp.App/ViewModels/: MainPageViewModel.cs  MainViewModel.cs
csharp/src/BetterRdp.Core/: AppService.cs  BetterRdp.Core.csproj  Dpapi.cs  Launcher.cs  Models.cs  Rdp.cs  Vault.cs
csharp/tests/BetterRdp.Core.Tests/: AppServiceTests.cs  BetterRdp.Core.Tests.csproj  EditDeleteTests.cs  LaunchTests.cs  RdpGenerationTests.cs  VaultCryptoTests.cs
docs/: SMOKE.md
docs/adr/: 0001-credential-vault-encryption.md
python/: README.md  pyproject.toml
python/src/better_rdp/: app.py  dpapi.py  launch.py  models.py  rdp.py  theme.py  vault.py
python/tests/: test_launch.py
src/better_rdp/: __init__.py  __main__.py  dpapi.py  gui.py  launch.py  rdp.py  vault.py
tests/: conftest.py  test_app_service.py  test_rdp_generation.py  test_vault_crypto.py
